# mlx-dinov3

./: .gitignore  LICENSE  README.md  convert_dinov3_pt.py  pyproject.toml
dinov3/models/: __init__.py  convnext.py
dinov3/models/layers/: __init__.py  layer_scale.py  patch_embed.py  rope.py
